--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "uifx": "^2.0.7"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
