--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "material-table": "^1.69.2",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.9.0",
-    "react-image-magnifiers": "^1.2.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-icons": "^3.11.0",
+    "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
     "react-magnifier": "^3.0.4",
-    "react-scripts": "^3.3.1",
+    "react-responsive": "^8.2.0",
+    "react-scripts": "^3.4.4",
+    "react-sliding-pane": "^6.1.2",
     "serialize-javascript": "^2.1.1",
+    "swiper": "^6.4.5",
     "uifx": "^2.0.7"
   },
   "scripts": {
