--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-responsive": "^8.2.0",
     "react-scripts": "^3.4.4",
     "react-sliding-pane": "^6.1.2",
+    "react-viewport-height": "^1.0.0",
     "serialize-javascript": "^2.1.1",
     "swiper": "^6.4.5",
     "uifx": "^2.0.7"
